--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 						<h4 class="card-title">CRYPTO</h4>
 						<div class="form-group">
 							<label>KEY</label>
-							<input class="form-control" type="string" id="mintAmountInput" value="" placeholder="content" />
+							<input class="form-control" type="text" id="mintAmountInput" value="" placeholder="content" />
 						</div>
 						<div class="form-group">
 							<label>CONTENT</label>
-							<input class="form-control" type="string" id="mintAmountInput2" value="" placeholder="content" />
+							<input class="form-control" type="text" id="mintAmountInput2" value="" placeholder="content" />
 						</div>
 						<div class="form-group">
 							<button class="btn btn-primary btn-lg btn-block mb-3" id="mintButton">加密</button>
