--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						<h4 class="card-title">CRYPTO</h4>
 						<div class="form-group">
 							<label>KEY</label>
-							<input class="form-control" type="text" id="mintAmountInput" value="" placeholder="content" />
+							<input class="form-control" type="text" id="mintAmountInput" value="" placeholder="key" />
 						</div>
 						<div class="form-group">
 							<label>CONTENT</label>
